--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
     "name": "tanvir10/plugin",
     "type": "library",
-    "description": "Plugin tools for Tanvir10",
-    "keywords": ["plugin","tanvir10"],
-    "homepage": "https://bitbucket.org/tanvir10io/tanvir10-plugin",
+    "description": "Boilerplate tool for wordpress",
+    "keywords": ["plugin","boilerplate"],
+    "homepage": "https://github.com/NHTanvir/plugin",
     "license": "GPL-3.0-or-later",
     "authors": [
         {
             "name": "Tanvir10",
-            "email": "hello@tanvir10.io",
-            "homepage": "https://tanvir10.io",
+            "email": "naymulhasantanvir10@gmail.com",
+            "homepage": "https://tanvir.sitetask.xyz",
             "role": "Developer"
         }
     ],
